# weargaitpd

./: .gitignore  README.md  download_data.py  heatmap_features.py  heatmap_frequency_features.py  main.py  pyproject.toml  stochastic_fractal_features.py
lstm autoencoder feature extraction/: README.md  gait_common.py  inference.py  reduction_summary.csv
lstm autoencoder feature extraction/Balance/: scaler.joblib
lstm autoencoder feature extraction/HurriedPace/: scaler.joblib
lstm autoencoder feature extraction/HurriedPace_mat/: scaler.joblib
lstm autoencoder feature extraction/SelfPace/: scaler.joblib
lstm autoencoder feature extraction/SelfPace_mat/: kept_channels.json  scaler.joblib
lstm autoencoder feature extraction/SelfPace_matTURN/: scaler.joblib
lstm autoencoder feature extraction/TUG/: scaler.joblib
lstm autoencoder feature extraction/TandemGait/: scaler.joblib
