[project]
name = "weargaitpd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "antropy>=0.2.2",
    "nolds>=0.6.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "synapseclient>=4.12.0",
    "tqdm>=4.67.3",
]
